--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,66 +1,39 @@
-h1 {
-  font-family: Papyrus, fantasy;
-  font-size: 24px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: 700;
-  line-height: 26.4px;
+.dropdown-item {
+  color:#000000;
 }
-h3 {
-  font-family: Papyrus, fantasy;
-  font-size: 14px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: 700;
-  line-height: 15.4px;
-}
-p {
-  font-family: Papyrus, fantasy;
-  font-size: 14px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: 400;
-  line-height: 20px;
-}
-blockquote {
-  font-family: Papyrus, fantasy;
-  font-size: 21px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: 400;
-  line-height: 30px;
-}
-pre {
-  font-family: Papyrus, fantasy;
-  font-size: 13px;
-  font-style: normal;
-  font-variant: normal;
-  font-weight: 400;
-  line-height: 18.5714px;
+.nav-link {
+  color:rgb(228, 228, 228);
 }
 
-.nav-link {
-  color:#000000;
+.item:hover {
+  color:rgb(245, 188, 188);
+}
+
+
+
+.nav-link:hover {
+  color:rgb(255, 255, 255);
 }
 
 .active {
   text-decoration: underline !important;
-  text-decoration-thickness: 5px !important;
+  text-decoration-thickness: 2px !important;
+  margin-top: 1px;
 }
 
 .pointer {
   cursor: pointer;
 }
 
-.card-button {
+ .card-button {
   border-radius: 0px;
 }
 
 .hoverable:hover {
-  border-right: 5px solid #0d6efd;
-  border-bottom: 5px solid #0d6efd;
+  border-right: 5px solid #000000;
+  border-bottom: 5px solid #000000;
   border-radius: 12px;
-}
+} 
 
 .ant-checkbox-wrapper:first-of-type {
   margin-left: 8px;
@@ -118,3 +91,4 @@ pre {
     background-position: 0% 50%;
   }
 }
+
